--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,15 @@ Flask==2.3.3
 Flask-SQLAlchemy==3.1.1
 Flask-Login==0.6.2
 Flask-WTF==1.2.1
-Werkzeug==2.3.7
+Flask-JWT-Extended==4.5.3
+Flask-Limiter==3.5.0
+Flask-Migrate==4.0.5
+Flask-Cors==4.0.0
+Flask-Swagger-UI==4.11.1
+pytest==7.4.3
+pytest-cov==4.1.0
+python-dotenv==1.0.0
 email-validator==2.1.0.post1
+Werkzeug==2.3.7
+gunicorn==21.2.0
 PyJWT==2.8.0
